--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </title>
 </head>
 <body>
-  
+  <header>
+    <div class="wrapper">
+      <h1>own text</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nihil dignissimos, quas voluptas itaque exercitationem aut quasi error rem illum libero reiciendis neque facilis aliquam minima cumque fugit, repellat fuga?</p>
+    </div>
+  </header>
 </body>
 </html>
