--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>first-git-project
-  </title>
+  <title>first-git-project</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <header>
     <div class="wrapper">
       <h1>own text</h1>
+      <h2>about git</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nihil dignissimos, quas voluptas itaque exercitationem aut quasi error rem illum libero reiciendis neque facilis aliquam minima cumque fugit, repellat fuga?</p>
     </div>
   </header>
